--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.0.1",
   "description": "",
   "main": "app.js",
+  "type": "module",
   "scripts": {
-    "start": "node app.js",
+    "start": "node --experimental-json-modules app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,6 +20,7 @@
   "homepage": "https://bitbucket.org/coxlab/iot.own-image-to-rtsp-streamer#readme",
   "dependencies": {
     "commander": "^10.0.1",
-    "pubsub-js": "^1.9.4"
+    "pubsub-js": "^1.9.4",
+    "redis": "^4.6.7"
   }
 }
