--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "homepage": "https://bitbucket.org/coxlab/iot.own-image-to-rtsp-streamer#readme",
   "dependencies": {
     "commander": "^10.0.1",
-    "pubsub-js": "^1.9.4",
+    "sharp": "^0.32.1",
     "redis": "^4.6.7"
   }
 }
