--- a/config/mediamtx.yml
+++ b/config/mediamtx.yml
@@ -462,6 +462,6 @@ paths:
     # Restart the command if it exits.
     runOnReadRestart: no
   ~^(LW[A-Fa-f0-9]{16})\/([A-Za-z0-9]\w*):
-    runOnDemand: ffmpeg -re -i http://iotown_image_streamer:8080/$G1/$G2 -f rtsp rtsp://localhost:$RTSP_PORT/$G1/$G2
+    runOnDemand: ffmpeg -re -i http://iotown_mjpeg_streamer:8080/$G1/$G2 -f rtsp rtsp://localhost:$RTSP_PORT/$G1/$G2
     runOnDemandRestart: yes
     runOnDemandStartTimeout: 600s
