--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,8 @@ services:
       driver: "local"
     networks:
       - iotown_default
+    ports:
+      - 28080:8080
     command: npm start -- -r ${REDIS_URL:-'redis://redis'}
 
   mediamtx:
